test/errors/test_rr.lac
//-----------------------------------------------------------------------------------
//
// LaCoGen - Test RR Conflict
//
// 31/03/2020
//
// Test Reduce/Reduce conflict
//
// -----------------------------------------------------------------------------------
  
%title        = "LaCoGen TEST RR Conflict";
%version      = "0";
%author       = "Duncan Munro";
%codeprefix   = "RRC";
%start        = <E>;


// ====================================================================
// Predefined Character sets
// ====================================================================

{bset}		 = [b];
                                  
// ====================================================================
// Terminals
// ====================================================================

b = {bset};


// ====================================================================
// Rules
// ====================================================================

<E> : <A>
    | <B>
    ;

<A> : <A> b
    | b 
	;

<B> : <B> b
    | b
	;
	